Bug 292941 - In search mode the sorting by path doesn't work
Summary: In search mode the sorting by path doesn't work
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: general (other bugs)
Version First Reported In: 2.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-01-31 10:12 UTC by Martin Stolpe
Modified: 2012-01-31 17:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments
Search results sorted by path name (80.19 KB, image/png)
2012-01-31 10:12 UTC, Martin Stolpe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Stolpe 2012-01-31 10:12:57 UTC
Created attachment 68365 [details]
Search results sorted by path name

Version:           2.0 (using KDE 4.8.0) 
OS:                Linux

If I search for a file and then want to sort the results by path the results aren't sorted accordingly (see attached screenshot).

Reproducible: Always

Steps to Reproduce:
Search for files.
Add path info to search result.
Sort search results by path name.

Actual Results:  
The search results in a way I do not understand.

Expected Results:  
Search results sorted by path name alphabetically.
Comment 1 Peter Penz 2012-01-31 16:18:26 UTC
Git commit 37ab10b2ef1248485a4a5cc878d21bcb2b3401aa by Peter Penz.
Committed on 31/01/2012 at 14:58.
Pushed by ppenz into branch 'master'.

Fix sorting issues

For some roles the sorting has not been implemented.
FIXED-IN: 4.8.1

M  +48   -28   dolphin/src/kitemviews/kfileitemmodel.cpp
M  +10   -0    dolphin/src/kitemviews/kfileitemmodel.h

http://commits.kde.org/kde-baseapps/37ab10b2ef1248485a4a5cc878d21bcb2b3401aa
Comment 2 Peter Penz 2012-01-31 16:18:39 UTC
Git commit 86a49188f5a917386e0be7c7c5a6183663073b11 by Peter Penz.
Committed on 31/01/2012 at 14:58.
Pushed by ppenz into branch 'KDE/4.8'.

Fix sorting issues

For some roles the sorting has not been implemented.
FIXED-IN: 4.8.1

M  +48   -28   dolphin/src/kitemviews/kfileitemmodel.cpp
M  +10   -0    dolphin/src/kitemviews/kfileitemmodel.h

http://commits.kde.org/kde-baseapps/86a49188f5a917386e0be7c7c5a6183663073b11
Comment 3 Martin Stolpe 2012-01-31 17:19:35 UTC
That was super fast! Thanks a lot for implementing the sorting function!