Fix sorting issues

For some roles the sorting has not been implemented.

BUG: 292941
FIXED-IN: 4.8.1